--- a/.github/workflows/update_generation_config.yaml
+++ b/.github/workflows/update_generation_config.yaml
@@ -15,8 +15,8 @@
 # downstream client libraries before they are released.
 name: Update generation configuration
 on:
-  schedule:
-  - cron: '0 2 * * *'
+  # schedule:
+  # - cron: '0 2 * * *'
   workflow_dispatch:
 
 jobs:
@@ -26,17 +26,17 @@ jobs:
       # the branch into which the pull request is merged
       base_branch: main
     steps:
-    - uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
-    - name: Update params in generation config to latest
-      shell: bash
-      run: |
-        set -x
-        [ -z "$(git config user.email)" ] && git config --global user.email "cloud-java-bot@google.com"
-        [ -z "$(git config user.name)" ] && git config --global user.name "cloud-java-bot"
-        bash .github/scripts/update_generation_config.sh \
-          --base_branch "${base_branch}"\
-          --repo ${{ github.repository }}
-      env:
-        GH_TOKEN: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
+      - name: Update params in generation config to latest
+        shell: bash
+        run: |
+          set -x
+          [ -z "$(git config user.email)" ] && git config --global user.email "cloud-java-bot@google.com"
+          [ -z "$(git config user.name)" ] && git config --global user.name "cloud-java-bot"
+          bash .github/scripts/update_generation_config.sh \
+            --base_branch "${base_branch}"\
+            --repo ${{ github.repository }}
+        env:
+          GH_TOKEN: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
