--- a/.github/workflows/update_generation_config.yaml
+++ b/.github/workflows/update_generation_config.yaml
@@ -35,8 +35,10 @@ jobs:
           set -x
           [ -z "$(git config user.email)" ] && git config --global user.email "cloud-java-bot@google.com"
           [ -z "$(git config user.name)" ] && git config --global user.name "cloud-java-bot"
+          ls -i .github/scripts/update_generation_config.sh
           bash .github/scripts/update_generation_config.sh \
             --base_branch "${base_branch}"\
             --repo ${{ github.repository }}
+          ls -i .github/scripts/update_generation_config.sh
         env:
           GH_TOKEN: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
