--- a/.github/workflows/update_generation_config.yaml
+++ b/.github/workflows/update_generation_config.yaml
@@ -28,7 +28,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
+          token: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}          
+      - if: always()
+        run: ls -i .github/scripts/update_generation_config.sh
       - name: Update params in generation config to latest
         shell: bash
         run: |
@@ -39,6 +41,8 @@ jobs:
           bash .github/scripts/update_generation_config.sh \
             --base_branch "${base_branch}"\
             --repo ${{ github.repository }}
-          ls -i .github/scripts/update_generation_config.sh
+
         env:
           GH_TOKEN: ${{ secrets.CLOUD_JAVA_BOT_TOKEN }}
+      - if: always()
+        run: ls -i .github/scripts/update_generation_config.sh          
